skins/base/base.css
/*
esoTalk Base Styles
This stylesheet contains all of the styles that lay out the esoTalk interfaces and make them work. This
allows skin stylesheets to focus mainly on styling the page wrapper (header, footer) and elements like links
and buttons. Then they can style anything else if need be. Easy!

z-index order reference:
0 default
100 floating body header
200 sheets
300 popups
400 tooltips
500 loading indicator, go to top, back buttons
600 messages
*/


/* Clearfix! */
.clearfix {display:inline-block; display:block}
.clearfix:after {content:" "; display:block; height:0; clear:both; overflow:hidden; visibility:hidden}


/* Links */
a {text-decoration:none}
a:hover {text-decoration:underline}


/* Reset the margins of some common elements */
p, ul, ol, pre, h1, h2, h3, h4, h5, h6 {margin:0 0 1em 0}
fieldset, img {border:0; padding:0; margin:0}
.bodyHeader h1 {margin:0; display:inline}


/* Generic text styles */
small, .subText {color:#888}
.disabled {color:#888; cursor:default}
.disabled:hover {text-decoration:none}
span.highlight {background:#fdef34; border:1px solid #fcef98; padding:1px 3px; border-radius:3px; -webkit-box-shadow:rgba(0, 0, 0, 0.5) 0 1px 1px; box-shadow:rgba(0, 0, 0, 0.5) 0 1px 1px}
.hasControls .controls {color:#888}
.help {color:#888; line-height:1.5em}


/* "Actions" - a string of text containing information about something that has happened. For example,
<span class='action'><span class='name'>Toby</span> posted in <a href=''>a conversation</a>.</span> */
.action {color:#888}
.action img.avatar {vertical-align:-6px; margin-right:3px}
.action .name, .action a, .action strong {color:#444; font-weight:bold}


/* Body */
.bodyHeader {padding:15px 0 12px; border:0; border-bottom:1px solid #ddd; margin-bottom:10px}
.bodyHeader.floating {-webkit-box-shadow:0 1px 1px rgba(0, 0, 0, 0.05); box-shadow:0 1px 1px rgba(0, 0, 0, 0.05); background:#fff; margin-left:-20px; margin-right:-20px; padding-left:20px; padding-right:20px}


/* Notifications button */
#hdr .popupWrapper {margin:-5px 0; display:inline-block}
#hdr .popupButton:hover {text-decoration:none}
#hdr #notifications {width:1.8em; height:1.1em; padding:4px 0; text-align:center; display:inline-block; text-shadow:none; font-weight:bold; border-radius:2px; background-color:#666; background-color:rgba(255, 255, 255, 0.1); color:#444; color:rgba(0, 0, 0, 0.3); border-bottom:1px solid rgba(0, 0, 0, 0.3)}
#hdr #notifications.new, #hdr .popupButton.active {background-color:#fff; color:#444; border-bottom-color:transparent}


/* "Go to top" and "back to ..." links (when they're floating) */
.floatingLink {position:fixed; background:#eee; background:rgba(238, 238, 238); border:1px solid #ccc; border-color:rgba(0, 0, 0, 0.15); font-size:120%; z-index:500; border-radius:3px; color:#444 !important; text-shadow:none}
#goToTop a.floatingLink {bottom:-4px; right:10px; padding:5px 12px 9px}
#backButton.floatingLink {top:15px; left:0; padding:3px; border-radius:0 2px 2px 0}
#backButton.floatingLink span {display:none}
#backButton.floatingLink:hover {text-decoration:none; padding-right:5px}
#backButton.floatingLink:hover span {display:inline}


/* Loading indicators */
#loading {padding:9px 12px 5px; position:fixed; top:-4px; left:50%; margin-left:-35px; text-align:center; width:70px; -webkit-box-shadow:rgba(0, 0, 0, 0.3) 0 1px 3px; box-shadow:rgba(0, 0, 0, 0.3) 0 1px 3px; border-radius:3px; background:#fff5a0; color:#a06a00; z-index:500}
.loadingOverlay {background:#fff url(loading.gif) no-repeat center 10px; z-index:250}
.loading {background:url(loading.gif) center 10px no-repeat; height:40px}


/* Generic areas */
.area, .sheet {border:1px solid #e1e1e1; border-radius:3px; margin-bottom:20px; margin-top:0; background:#fbfbfb}
.area {padding:15px}
.area.help {padding-top:10px}
.area h3 {font-size:110%}


/* "Things" - distinguishable items such as posts, activity items, plugins, and skins. */
.thing {border:1px solid #ccc; border-width:1px; border-style:solid; border-radius:3px; background:#fff; -webkit-box-shadow:0 1px 1px rgba(0, 0, 0, 0.08); box-shadow:0 1px 1px rgba(0, 0, 0, 0.08); position:relative}
.thing:before {border-color:#ccc}
.thing:after {border-color:#fff}


/* Controls */
.controls {list-style-type:none; padding:0; font-size:85%}
.controls > li {display:inline; margin-right:10px}

.hasControls .controls {opacity:0; float:right; -webkit-transition:opacity 0.1s linear}
.hasControls:hover .controls, .edit .controls, .showControls .controls {opacity:1}


/* Icons */
[class*=icon-], [class*=control-], .online {display:inline-block; background:url(icons.png) no-repeat; text-indent:-9999px}

.icon-mobile {background-position:-20px -0px; width:16px; height:16px}
.icon-tick {background-position:-20px -543px; width:10px; height:8px}
.icon-dropdown {background-position:-20px -571px; width:7px; height:4px}

.icon-settings {background-position:-20px -72px; width:12px; height:12px}
.icon-add {background-position:-20px -104px; width:12px; height:12px}
.icon-delete {background-position:-20px -200px; width:12px; height:12px}
.icon-restore {background-position:-20px -264px; width:12px; height:12px}
.icon-search {background-position:-20px -296px; width:12px; height:12px}
.icon-quote {background-position:-20px -392px; width:12px; height:12px}
.icon-edit {background-position:-20px -424px; width:12px; height:12px}

.control-settings {background-position:-14px -66px}
.control-add {background-position:-14px -98px}
.control-delete, .control-reset {background-position:-14px -194px}
.control-restore {background-position:-14px -258px}
.control-search {background-position:-14px -290px}
.control-quote {background-position:-14px -386px}
.control-edit {background-position:-14px -418px}


/* Controls (icons with hover/click effects) */
[class*=control-] {opacity:0.4; -webkit-transition:opacity 0.05s linear; width:12px; height:12px; padding:6px; margin:-6px -1px}
[class*=control-]:hover {opacity:0.7}
[class*=control-]:active {opacity:1}
/* ... */

